<resources>
    <string name="app_name">MyPet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authorization">Авторизация</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="phone">Телефон</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="change_data">Изменить данные</string>
    <string name="edit">Редактировать</string>
    <string name="exit">Выход</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="registration">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="temperature">Температура</string>
    <string name="pressure">Давление</string>
    <string name="breathing_rate">Частота дыхания</string>
    <string name="heart_rate">ЧCC</string>
    <string name="metric_settings">Настройки показателей</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="turn_on_signal">Сигнал при критических\
        показателях</string>
    <string name="low_temperature">Нижний порог t°</string>
    <string name="high_temperature">Верхний порог t°</string>
    <string name="low_pressure">Нижний порог Па</string>
    <string name="high_pressure">Верхний порог Па</string>
    <string name="low_heart_rate">Нижний порог уд/мин</string>
    <string name="high_heart_rate">Верхний порог уд/мин</string>
    <string name="low_breathing_rate">Нижний порог вд/мин</string>
    <string name="high_breathing_rate">Верхний порог вд/мин</string>
    <string name="profile">профиль</string>
    <string name="indicators">показатели</string>
    <string name="settings">настройки</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="muscleActivity">Активность</string>
</resources>