<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_marginTop="93dp"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="315dp"
        android:backgroundTint="@color/active_button"
        android:text="@string/edit"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="377dp"
        android:backgroundTint="@color/active_button"
        android:text="@string/exit"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/delete_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="439dp"
        android:backgroundTint="@color/active_button"
        android:text="@string/delete_account"
        android:textSize="12sp"/>

</FrameLayout>