<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeartRateFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="0dp"
        app:elevation="0dp"
        android:src="@drawable/ic_btn_previous"
        app:borderWidth="0dp" />

    <TextView
        android:layout_marginTop="60dp"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/heart_rate"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="125dp"
        android:background="#00FFFFFF"
        android:text="@string/day"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="125dp"
        android:background="#00FFFFFF"
        android:text="@string/week"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="125dp"
        android:background="#00FFFFFF"
        android:text="@string/month"
        android:textColor="@color/black" />
</FrameLayout>