<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.ProfileEditingFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="0dp"
        android:src="@drawable/ic_btn_previous"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_previous"/>


    <TextView
        android:id="@+id/name_of_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"/>

    <TextView
        android:id="@+id/email_of_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_of_user"/>

    <EditText
        android:id="@+id/name_field"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_of_user"/>

    <EditText
        android:id="@+id/password_field"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_field"/>

    <EditText
        android:id="@+id/repeat_password_field"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field"/>

    <Button
        android:id="@+id/button_change_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/inactive_button"
        android:text="@string/change_data"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password_field"/>

</androidx.constraintlayout.widget.ConstraintLayout>