<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.MoreDataFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_btn_previous"
        app:borderWidth="0dp"
        android:elevation="0dp"
        app:elevation="0dp"/>

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/white"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/appBarLayout"
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="false"
                app:layout_collapseMode="parallax">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:id="@+id/chip3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breathing_rate"
                    />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heart_rate"
                    />
            </com.google.android.material.chip.ChipGroup>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin">
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:text="@string/day"
                android:textColor="@color/black"
                app:layout_collapseMode="pin"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:text="@string/week"
                android:textColor="@color/black"
                app:layout_collapseMode="pin"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:text="@string/month"
                android:textColor="@color/black"
                app:layout_collapseMode="pin"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_less"
                android:layout_width="44dp"
                android:layout_height="39dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="60dp"
                android:clickable="true"
                android:elevation="0dp"
                android:src="@drawable/less"
                app:backgroundTint="#00FFFFFF"
                app:elevation="0dp"
                app:layout_collapseMode="pin"/>

            <TextView
                android:id="@+id/day_month_year"
                android:layout_marginTop="72dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="12 октября 2022"
                android:textColor="@color/black"
                app:layout_collapseMode="pin"/>

            <TextView
                android:id="@+id/time"
                android:layout_marginTop="120dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:gravity="center"
                android:text="16:44"
                android:textColor="@color/black"
                app:layout_collapseMode="pin"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_anchorGravity="bottom|end"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>