<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.BreathingRateFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/header"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/breathing_rate"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

    <Button
        android:id="@+id/dayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/day"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/weekButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/week"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/monthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/month"
        android:textColor="@color/black" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_less"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:clickable="true"
        android:elevation="0dp"
        android:src="@drawable/less"
        app:backgroundTint="#00FFFFFF"
        app:elevation="0dp"
        app:layout_constraintRight_toLeftOf="@+id/currentDate"
        app:layout_constraintTop_toBottomOf="@+id/linear" />

    <TextView
        android:id="@+id/currentDate"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="12 октября 2022"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_less"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="16:44"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDate" />


</androidx.constraintlayout.widget.ConstraintLayout>